# sqlite-rag

./: .gitignore  .pre-commit-config.yaml  README.md  bandit.yaml  pyproject.toml  setup.py  test_chunker.py
.devcontainer/: devcontainer.json
.github/workflows/: pypi-package.yaml  test.yaml
model_evaluation/: README.md  ms_marco.py  test_ms_marco.py
model_evaluation/configs/: gemma_300M_Q8_650rows.json  qwen3_Q8_650rows.json
model_evaluation/results/: gemma_300M_Q8_650rows_evaluation_results.txt  qwen3_Q8_650rows_evaluation_results.txt
scripts/: get_gguf_model.sh
src/: chunker.py  cli.py  database.py  engine.py  reader.py  repository.py  settings.py  sqliterag.py
src/models/: document.py
src/sqlite_rag/: __init__.py  _version.py  chunker.py  cli.py  database.py  engine.py  extractor.py  formatters.py  logger.py  reader.py  repository.py  sentence_splitter.py  settings.py  sqliterag.py
src/sqlite_rag/extractors/: base.py  frontmatter.py
src/sqlite_rag/models/: chunk.py  document.py  document_result.py  sentence.py  sentence_result.py
tests/: conftest.py  test_chunker.py  test_database.py  test_engine.py  test_extractor.py  test_reader.py  test_repository.py  test_sentence_splitter.py  test_settings.py  test_sqlite_rag.py
tests/assets/: doc-base64-images.md
tests/assets/samples/: 7_tv_speakers_to_improve_your_home_audio_experience.txt  facebook_users_are_rediscovering_the_poke.txt  new_jersey_first_lady_tammy_murphy_drops_senate_bid.txt  sam_altman_rejoins_openai_board_of_directors.txt  spacex_prepares_third_test_of_starship_rocket.txt  the_14_best_bed_sheets_of_2024_according_to_experts.txt  the_best_sleep_sacks_tried_by_babies_and_parents.txt  us_flying_americans_out_of_troubled_haiti_capital.txt
tests/extractors/: test_frontmatter.py
tests/integration/: test_cli.py  test_engine.py
tests/models/: test_chunk.py  test_document.py
