[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-rag"
version = "0.1.0"
description = "Hybird search with SQLite AI and SQLite Vector"
authors = [{name = "User"}]
requires-python = ">=3.10"
dependencies = [
    "attrs",
    "typer",
    "huggingface_hub",
    "markitdown[all]",
    "sqlite-ai",
    "sqliteai-vector"
]

# .. or [dependency-groups] ?
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "bandit",
    "isort",
    "pre-commit"
]

[project.scripts]
sqlite-rag = "sqlite_rag.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sqlite_rag*"]

[tool.isort]
# make the tools compatible to each other
profile = "black"

[tool.pytest.ini_options]
log_level = "INFO"
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
