[build-system]
requires = ["setuptools>=61.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-rag"
version = "0.0.0"
description = "Hybird search with SQLite AI and SQLite Vector"
authors = [{name = "SQLite AI Team"}]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs",
    "typer",
    "huggingface_hub[cli]",
    "markitdown[all]",
    "sqlite-ai",
    "sqliteai-vector"
]

[project.optional-dependencies]
dev = [
    "toml",
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "bandit",
    "isort",
    "pre-commit"
]

[project.urls]
Homepage = "https://sqlite.ai"
Repository = "https://github.com/sqliteai/sqlite-rag"
Issues = "https://github.com/sqliteai/sqlite-rag/issues"

[project.scripts]
sqlite-rag = "sqlite_rag.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sqlite_rag*"]

[tool.isort]
# make the tools compatible to each other
profile = "black"

[tool.pytest.ini_options]
log_level = "INFO"
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
